@@ -234,7 +234,7 @@ ERROR
 (multiple-value-list (function-lambda-expression #'foo))
 #+CLISP
 ((LAMBDA (X) (DECLARE (SYSTEM::IN-DEFUN FOO)) (BLOCK FOO (LIST X)))
- #(NIL NIL NIL NIL ((DECLARATION OPTIMIZE DECLARATION)))
+ #(NIL NIL NIL NIL ((DECLARATION OPTIMIZE DECLARATION CLOS:DYNAMICALLY-MODIFIABLE)))
  foo)
 #+CMU
 ((lambda (x) (block foo (list x))) nil foo)
@@ -286,7 +286,7 @@ UNKNOWN
 #+CLISP
 ((LAMBDA (V A) (DECLARE (SYSTEM::IN-DEFUN (SETF FOO)))
   (BLOCK FOO (SETF (CAR A) V)))
- #(NIL NIL NIL NIL ((DECLARATION OPTIMIZE DECLARATION)))
+ #(NIL NIL NIL NIL ((DECLARATION OPTIMIZE DECLARATION CLOS:DYNAMICALLY-MODIFIABLE)))
  (SETF FOO))
 #+CMU
 ((lambda (v a) (block foo (setf (car a) v))) nil (setf foo))
