@@ -112,6 +112,7 @@ User visible changes
   + Fix COMPILE-FILE-PATHNAME logical pathname handling (bug#677).
   + Streams returned by MAKE-STREAM may be passed to TRUENAME (bug#679).
   + Do not raise the CLOS:GF-ALREADY-CALLED-WARNING on Gray streams.
+  + Improve consistency in declaration handling (bug#702).
 
 
 2.49 (2010-07-07)
