@@ -1,3 +1,9 @@
+2017-08-03  Sam Steingold  <sds@gnu.org>
+
+	* eval20.tst: add tests for bug#702
+	* lambda.tst: the default declaration environment now contains
+	DYNAMICALLY-MODIFIABLE
+
 2017-08-02  Sam Steingold  <sds@gnu.org>
 
 	* mop-aux.lisp: Use ("~?" fmt args) instead of ("~A" (apply
